syntax = "proto3";

package api_friends;

import "home_friends.proto";
import "home_account.proto";
import "errors.proto";

service Friends {
    rpc ApplyFriends(ApplyFriendsReq) returns (ApplyFriendsRes) {};             // 添加好友
    rpc DelFriends(DelFriendsReq) returns (DelFriendsRes) {};                   // 删除好友
    rpc AgreeFriendApply(AgreeFriendApplyReq) returns (AgreeFriendApplyRes) {}; // 同意好友申请
}

// 添加好友
message ApplyFriendsReq {
    im_home_proto.ClientOnlineInfo ClientInfo = 1;
    im_home_proto.ApplyFriendsReq Data = 2;
}

message ApplyFriendsRes {
    im_error_proto.ErrCode ErrCode = 1;
    im_home_proto.ApplyFriendsRes Data = 2;
}

// 同意好友申请
message AgreeFriendApplyReq {
    im_home_proto.ClientOnlineInfo ClientInfo = 1;
    im_home_proto.AgreeFriendApplyReq Data = 2;
}

message AgreeFriendApplyRes {
    im_error_proto.ErrCode ErrCode = 1;
    im_home_proto.AgreeFriendApplyRes Data = 2;
}

// 删除好友
message DelFriendsReq {
    im_home_proto.ClientOnlineInfo ClientInfo = 1;
    im_home_proto.DelFriendsReq Data = 2;
}

message DelFriendsRes {
    im_error_proto.ErrCode ErrCode = 1;
    im_home_proto.DelFriendsRes Data = 2;
}